--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     <link rel="icon" href="favicon.png" type="image/x-icon" />
-    <title>Quest Finder</title>
+    <title>CHANGE ME!</title>
   </head>
   <body>
     <div id="root"></div>
